Fix some spacing issues.

--- a/gravy/static/gravy/style.scss
+++ b/gravy/static/gravy/style.scss
@@ -40,7 +40,7 @@ h1, h2, h3, h5, h6 {
 }
 
 #ankur_sethi {
-    margin-bottom: 0em;
+    margin-bottom: 0.3em;
     color: white;
 }
 
@@ -67,7 +67,7 @@ h1, h2, h3, h5, h6 {
 #pagination, #footer {
     color: #E8CAA4;
     padding-left: 2em;
-    margin-top: 1em;
+    margin-top: 1.3em;
 
     a {
         color: #E8CAA4;
